--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KiCAD-Sharepoint"]
 	path = KiCAD-Sharepoint
 	url = git@github.com:lhr-solar/KiCAD-Sharepoint.git
+[submodule "Firmware/Embedded-Sharepoint"]
+	path = Firmware/Embedded-Sharepoint
+	url = git@github.com:lhr-solar/Embedded-Sharepoint.git
