--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "KiCAD-Sharepoint"]
 	path = KiCAD-Sharepoint
 	url = git@github.com:lhr-solar/KiCAD-Sharepoint.git
-[submodule "Firmware/Embedded-Sharepoint"]
-	path = Firmware/Embedded-Sharepoint
-	url = git@github.com:lhr-solar/Embedded-Sharepoint.git
 [submodule "Hardware/KiCAD-Sharepoint"]
 	path = Hardware/KiCAD-Sharepoint
 	url = git@github.com:lhr-solar/KiCAD-Sharepoint.git
+[submodule "Firmware/Nucleo/Embedded-Sharepoint"]
+	path = Firmware/Nucleo/Embedded-Sharepoint
+	url = https://github.com/lhr-solar/Embedded-Sharepoint.git
